...
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"

                >
                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/phone_number_input_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="11"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    app:boxStrokeColor="@color/red_500"
...
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:layout_margin="10dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_save_btn"
                android:text="@string/save"
                android:textColor="@color/white"
                android:outlineAmbientShadowColor="@color/teal_700"
                android:backgroundTint="@color/teal_700"
                android:layout_weight="1"
                android:layout_margin="10dp"/>
...
